--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
@@ -14,12 +14,12 @@
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo">
-      <a href="#">Mon Logo</a>
+      <a href="#">Mo Logo</a>
     </div>
     <nav class="nav-links">
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#">Acceuil</a></li>
+        <li><a href="#">A propos</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">Contact</a></li>
@@ -29,6 +29,16 @@
       <i class="fas fa-bars"></i>
     </div>
   </header>
+
+  <!-- Hero Text -->
+  <div class="text_hero">
+    <h1>Presentation du carroussel</h1>
+    <article>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, blanditiis consequuntur, iure alias voluptas quas, 
+        quasi minus sint ab exercitationem possimus earum laboriosam officia at dicta ducimus distinctio autem nihil? Lorem ipsum dolor 
+        sit amet consectetur adipisicing elit. Perferendis dignissimos neque, fugit quibusdam consectetur nemo voluptate aut quasi nostrum alias praesentium? Voluptate sapiente cupiditate repellat quam placeat ratione minus maiores.</p>
+    </article>
+  </div>
 
   <!-- Carrousel -->
   <div class="carousel-container">
@@ -41,6 +51,56 @@
   <div id="lightbox" class="lightbox" onclick="closeLightbox()">
     <img id="lightbox-img" src="" alt="Large view" />
   </div>
+
+  <!-- Advertisers Service Card -->
+  <section id="advertisers" class="advertisers-service-sec">
+    <div class="container">
+      <div class="section-header text-center">
+        <h2 class="fw-bold">
+          Our
+          <span class="b-class-secondary">Advertiser </span>Services
+        </h2>
+        <p class="sec-icon"><i class="fa-solid fa-gear"></i></p>
+      </div>
+      <div class="cards-wrapper">
+        <div class="service-card">
+          <div class="icon-wrapper">
+            <i class="fa-solid fa-chart-line"></i>
+          </div>
+          <h3>Tracking Lead</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
+        </div>
+        <div class="service-card">
+          <div class="icon-wrapper">
+            <i class="fa-solid fa-arrows-down-to-people"></i>
+          </div>
+          <h3>Advanced Targeting solution</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
+        </div>
+        <div class="service-card">
+          <div class="icon-wrapper">
+            <i class="fa-solid fa-globe"></i>
+          </div>
+          <h3>Global Reach & Quality Traffic</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
+        </div>
+        <div class="service-card">
+          <div class="icon-wrapper">
+            <i class="fa-solid fa-money-check-dollar"></i>
+          </div>
+          <h3>Flexible pricing models</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
+        </div>
+        <div class="service-card">
+          <div class="icon-wrapper">
+            <i class="fa-regular fa-circle-check"></i>
+          </div>
+          <h3>Advanced optimization technologies & methodologies</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer class="footer-section">
@@ -109,7 +169,7 @@
   </footer>
 
   <script src="js/caroussel_gestion.js"></script>
-
+  <script src="js/nav_bar.js"></script>
 </body>
 
 </html>
