--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo">
-      <a href="#">Mo Logo</a>
+      <a href="#">Votre logo ICI</a>
     </div>
     <nav class="nav-links">
       <ul>
-        <li><a href="#">Acceuil</a></li>
+        <li><a href="#">accueil</a></li>
         <li><a href="#">A propos</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Portfolio</a></li>
@@ -57,8 +57,8 @@
     <div class="container">
       <div class="section-header text-center">
         <h2 class="fw-bold">
-          Our
-          <span class="b-class-secondary">Advertiser </span>Services
+         Présentation
+          <span class="b-class-secondary">de nos </span>Services
         </h2>
         <p class="sec-icon"><i class="fa-solid fa-gear"></i></p>
       </div>
@@ -67,35 +67,35 @@
           <div class="icon-wrapper">
             <i class="fa-solid fa-chart-line"></i>
           </div>
-          <h3>Tracking Lead</h3>
+          <h3>Nos créations</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
         </div>
         <div class="service-card">
           <div class="icon-wrapper">
             <i class="fa-solid fa-arrows-down-to-people"></i>
           </div>
-          <h3>Advanced Targeting solution</h3>
+          <h3>Nos entretiens</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
         </div>
         <div class="service-card">
           <div class="icon-wrapper">
             <i class="fa-solid fa-globe"></i>
           </div>
-          <h3>Global Reach & Quality Traffic</h3>
+          <h3>Nos services</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
         </div>
         <div class="service-card">
           <div class="icon-wrapper">
             <i class="fa-solid fa-money-check-dollar"></i>
           </div>
-          <h3>Flexible pricing models</h3>
+          <h3>Nos engagements</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
         </div>
         <div class="service-card">
           <div class="icon-wrapper">
             <i class="fa-regular fa-circle-check"></i>
           </div>
-          <h3>Advanced optimization technologies & methodologies</h3>
+          <h3>Nos références</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
         </div>
       </div>
