--- a/index.html
+++ b/index.html
@@ -65,35 +65,36 @@
       <div class="cards-wrapper">
         <div class="service-card">
           <div class="icon-wrapper">
-            <i class="fa-solid fa-chart-line"></i>
+            <i class="fa-solid fa-chart-line">logo ici</i>
+            
           </div>
           <h3>Nos créations</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
         </div>
         <div class="service-card">
           <div class="icon-wrapper">
-            <i class="fa-solid fa-arrows-down-to-people"></i>
+            <i class="fa-solid fa-arrows-down-to-people">logo ici</i>
           </div>
           <h3>Nos entretiens</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
         </div>
         <div class="service-card">
           <div class="icon-wrapper">
-            <i class="fa-solid fa-globe"></i>
+            <i class="fa-solid fa-globe">logo ici</i>
           </div>
           <h3>Nos services</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
         </div>
         <div class="service-card">
           <div class="icon-wrapper">
-            <i class="fa-solid fa-money-check-dollar"></i>
+            <i class="fa-solid fa-money-check-dollar">logo ici</i>
           </div>
           <h3>Nos engagements</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
         </div>
         <div class="service-card">
           <div class="icon-wrapper">
-            <i class="fa-regular fa-circle-check"></i>
+            <i class="fa-regular fa-circle-check">logo ici</i>
           </div>
           <h3>Nos références</h3>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam consequatur necessitatibus eaque.</p>
