insertion toggle bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Carrousel Dynamique</title>
   <link href="https://fonts.cdnfonts.com/css/graffiti-font" rel="stylesheet">
   <link rel="stylesheet" href="style/style.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -25,14 +26,14 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <div class="menu-toggle" onclick="toggleMenu()">
+    <div class="menu-toggle">
       <i class="fas fa-bars"></i>
     </div>
   </header>
 
   <!-- Hero Text -->
   <div class="text_hero">
-    <h1>Presentation du carroussel</h1>
+    <h1>Présentation du carrousel</h1>
     <article>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, blanditiis consequuntur, iure alias voluptas quas, 
         quasi minus sint ab exercitationem possimus earum laboriosam officia at dicta ducimus distinctio autem nihil? Lorem ipsum dolor 
@@ -53,7 +54,8 @@
   </div>
 
   <!-- Advertisers Service Card -->
-  <section id="advertisers" class="advertisers-service-sec">
+  
+   <section id="advertisers" class="advertisers-service-sec">
     <div class="container">
       <div class="section-header text-center">
         <h2 class="fw-bold">
@@ -104,70 +106,72 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer-section">
-    <div class="footer-cta">
-      <div class="cta-container">
-        <div class="single-cta">
-          <i class="fas fa-map-marker-alt"></i>
-          <div class="cta-text">
-            <h4>Find us</h4>
-            <span>1223 avenue des Champs Elysée 75000 Paris</span>
-          </div>
+ <!-- Footer -->
+ <footer class="footer-section">
+  <div class="footer-cta">
+    <div class="cta-container">
+      <div class="single-cta">
+        <i class="fas fa-map-marker-alt"></i>
+        <div class="cta-text">
+          <h4>Notre adresse</h4>
+          <span>1223 avenue des Champs Elysée 75000 Paris</span>
         </div>
-        <div class="single-cta">
-          <i class="fas fa-phone"></i>
-          <div class="cta-text">
-            <h4>Call us</h4>
-            <span>+33 01 02 03 04 05</span>
-          </div>
+      </div>
+      <div class="single-cta">
+        <i class="fas fa-phone"></i>
+        <div class="cta-text">
+          <h4>Nous contacter</h4>
+          <span>+33 01 02 03 04 05</span>
         </div>
-        <div class="single-cta">
-          <i class="far fa-envelope-open"></i>
-          <div class="cta-text">
-            <h4>Mail us</h4>
-            <span>mail@info.com</span>
-          </div>
+      </div>
+      <div class="single-cta">
+        <i class="far fa-envelope-open"></i>
+        <div class="cta-text">
+          <h4>Mail</h4>
+          <span>mail@info.com</span>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="footer-content">
-      <div class="footer-widget-container">
-        <div class="footer-widget">
-          <div class="footer-logo">
-            <a href="index.html"><img src="" alt="logo"></a>
-          </div>
-          <div class="footer-text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
-          </div>
-          <div class="footer-social-icon">
-            <span>Follow us</span>
-            <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
-            <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-            <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
-          </div>
+  <div class="footer-content">
+    <div class="footer-widget-container">
+      <div class="footer-widget">
+        <div class="footer-logo">
+          <a href="index.html"><img src="" alt="logo"></a>
         </div>
-        <div class="footer-widget">
-          <div class="footer-widget-heading">
-            <h3>Useful Links</h3>
-          </div>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
+        <div class="footer-text">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+        </div>
+        <div class="footer-social-icon">
+          <span>Suivez nous sur les réseaux</span>
+          <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+          <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
+          <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
         </div>
       </div>
+      <div class="footer-widget">
+        <div class="footer-widget-heading">
+          <h3>Liens utilisateurs</h3>
+        </div>
+        <ul>
+          <li><a href="#">Accueil</a></li>
+          <li><a href="#">A propos</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
     </div>
+  </div>
 
-    <div class="copyright-area">
-      <div class="copyright-text">
-        <p>Copyright &copy; 2025, All Right Reserved</p>
-      </div>
+  <div class="copyright-area">
+    <div class="copyright-text">
+      <p>Copyright &copy; 2025, All Right Reserved</p>
     </div>
-  </footer>
+  </div>
+</footer>
+  
 
   <script src="js/caroussel_gestion.js"></script>
   <script src="js/nav_bar.js"></script>
